--- a/Web Pages/Food Delivery Website/newstyle.css
+++ b/Web Pages/Food Delivery Website/newstyle.css
@@ -68,4 +68,16 @@ li a.navbar {
 	background: #ccc;
   }
 
+  .footer
+		{
+			display: flex;
+			width: 100%;
+			height: 5%;
+			justify-content: center;
+			align-items: center;
+			background-color:rgb(226, 40, 40);
+			color: white;
+			position: absolute;
+		}
+
 
