--- a/Web Pages/Food Delivery Website/newstyle.css
+++ b/Web Pages/Food Delivery Website/newstyle.css
@@ -1,12 +1,19 @@
 body{
 	padding: 0;
     margin: 0;
+	height: 100%;
+	position: relative;
 }
 
 .navbar img
 {
   padding-right: 13px;
   padding-left: 8px;
+}
+
+.navbar img:not(.cart){ /* For the chef logo on the navbar*/
+	padding-top: 5px;
+	padding-bottom: 0px;
 }
 
 ul.navbar
@@ -68,18 +75,27 @@ li a.navbar {
 	background: #ccc;
   }
 
-  .footer
-		{
-			display: flex;
-			width: 100%;
-			height: 5%;
-			justify-content: center;
-			align-items: center;
-			background-color:rgb(226, 40, 40);
-			color: white;
-			position: absolute;
-		}
+  .main-container
+  {
+	  min-height: 100vh;
+	  overflow: hidden;
+	  display: block;
+	  position: relative;
+	  padding-bottom:5px ;
+  }
 
+  footer{
+	font-family: 'Akaya Telivigala';
+	  position: absolute;
+	  padding-top: 12px;
+	  bottom: 0;
+	  width: 100%;
+	  height: 35px;
+	  background-color: rgb(226, 40, 40);
+	  color: white;
+      text-align:center;
+	  font-size: 21px;
+  }
 		.flex {
 			color: white;
 			font-family: 'Akaya Telivigala';
